syntax = "proto3";

package proto;

option go_package = "./pkg/proto;proto";

message Image {
  string id = 1;
  bytes data = 2;
  string format = 3;
}

message UploadImageRequest {
  string client_id = 1;
  string id = 2;
  string recognition_task_id = 3;
  Image image = 4;
}

message UploadImageResponse {
  string id = 1;
  string url = 2;
}

message GetImageRequest {
  string id = 1;
  string client_id = 2;
  string recognition_task_id = 3;
}

message GetImageResponse {
  Image image = 1;
  string url = 2;
}

// Image Service
service ImageService {
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
  rpc GetImage(GetImageRequest) returns (GetImageResponse);
}
